# operating_system-macos

./: .gitignore  _.cmake  __.cmake  debug.xcconfig  release.xcconfig  system.xcconfig
acme_macos/: CMakeLists.txt  _.h  _001TryClassify_addr2line.c  _001address_to_line.cpp  __.h  _acme_macos.h  _c_mm.h  _factory.cpp  _library.h  _macos.h  _mm.h  aaa2_application.h  aaa2_main_window.cpp  aaa2_main_window.h  aaa_addr2line.c  aaa_application.cpp  aaa_application.h  aaa_axuielement.cpp  aaa_dir_system.cpp  aaa_dir_system.h  aaa_file.cpp  aaa_file.h  aaa_file_system.cpp  aaa_file_system.h  aaa_thread.cpp  aaa_trace.cpp  aaa_user.h  aaa_util.cpp  aaa_xxx.cpp  aaa_xxx.hpp  acme_dir.cpp  acme_dir.h  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_path.cpp  acme_path.h  address_to_line.cpp  address_to_line.h  (+50 more)
acme_macos/FileSystemEvents/: watcher.cpp  watcher.h
acme_macos/acme_macos.xcodeproj/: project.pbxproj
acme_macos/player/: music_midi_core_audio_player.cpp  music_midi_core_audio_player.h
apex_macos/: CMakeLists.txt  NSBundle+OBCodeSigningInfo.h  NSBundle+OBCodeSigningInfo.mm  NSPasteboard++.mm  _.h  _apex_macos.h  _dependencies.txt  _factory.cpp  _library.h  _mm.h  _references.txt  aaa_ApexWindowApp.mm  aaa_copydesk.cpp  aaa_copydesk.h  aaa_file.h  aaa_file2.cpp  aaa_keyboard copy.cpp  aaa_os_context.cpp  aaa_os_context.h  aaa_stdio_file.cpp  aaa_stdio_file.h  aaa_trace.cpp  aaa_util.cpp  app.mm  application.cpp  application.h  dir_context.cpp  dir_context.h  dir_system.cpp  dir_system.h  factory_exchange.cpp  factory_exchange.cpp 04-25-39-594.cpp  file.mm  file_context.cpp  file_context.h  file_os_watcher.h  file_system.cpp  file_system.h  framework.h  integration_context.cpp  (+22 more)
apex_macos/FileSystemEvents/: watcher.cpp  watcher.h
apex_macos/apex_macos.xcodeproj/: project.pbxproj
audio_mixer_core_audio/: CMakeLists.txt  _.h  _audio_mixer_core_audio.h  _factory.cpp  aaa_callback.cpp  aaa_callback.h  aaa_section.cpp  aaa_section.h  aaa_thread.cpp  aaa_thread.h  audio_mixer.cpp  audio_mixer.h  audio_mixer_core_audio.h  audio_mixer_core_audio.vcxproj  audio_mixer_core_audio_callback.cpp  audio_mixer_core_audio_destination.cpp  audio_mixer_core_audio_device.cpp  audio_mixer_core_audio_factory_exchange.cpp  audio_mixer_core_audio_factory_exchange.h  audio_mixer_core_audio_line_info.cpp  audio_mixer_core_audio_section.cpp  audio_mixer_core_audio_source.cpp  audio_mixer_core_audio_thread.h  callback.h  control.cpp  control.h  destination.cpp  destination.h  device.cpp  device.h  framework.h  line_info.cpp  line_info.h  mixer.cpp  mixer.h  section.h  source.cpp  source.h  window.cpp  window.h
audio_mixer_core_audio/audio_mixer_core_audio.xcodeproj/: project.pbxproj
aura_macos/: AuraWindow.mm  AuraWindowApp.h  CMakeLists.txt  RtMidi.cpp  _.h  _aura_macos.h  _c_mm.h  _dependencies.txt  _factory.cpp  _library.h  _mm.h  _references.txt  aaa_file_image.cpp  aaa_image.cpp  aaa_interaction_impl.cpp  aaa_interaction_impl.h  aaa_library.h  factory_exchange.cpp  file_image.cpp  framework.h  image.cpp  interaction_impl.cpp  interaction_impl.h  music_midi_core_audio_translation.cpp  node.cpp  node.h  notify_icon_mm_bridge.h  shell.cpp  shell.h  shell.mm
aura_macos/aura_macos.xcodeproj/: project.pbxproj
aura_macos/aura_macos_Test/: music_midi_core_audio_iosTests.m
aura_macos/player/: music_midi_core_audio_player.cpp
media_macos/: CMakeLists.txt  _.h  _factory.cpp  _freeimage_imaging.vcxproj  _freeimage_imaging_vs12.vcxproj  aaa_archive_palette.cpp  aaa_archive_palette.h  aaa_archive_printer.cpp  aaa_archive_printer.h  aaa_iosAudioPickerViewController.h  aaa_iosAudioPickerViewController.mm  aaa_want_to_remove_file_procedure.cpp  aaa_want_to_remove_file_procedure_ex1.cpp  aaa_want_to_remove_fimemory.h  aaa_want_to_remove_loading.cpp  aaa_want_to_remove_loading_gif.cpp  aaa_want_to_remove_saving.cpp  context_image.h  framework.cpp  framework.h  freeimage_imaging.cbp  freeimage_imaging.def  freeimage_imaging.vcxproj  freeimage_imaging.vcxproj.filters  image.cpp  image_gif.cpp  macosMediaPickerViewController.h  macosMediaPickerViewController.mm  macos_media_picker.h  macos_media_picker.mm  media.mm  media_macos.cpp  media_macos.h  media_picker.cpp  media_picker.h  media_player.cpp  media_player.h  mm_macos_image.mm  nord_freeimage_imaging.vcxproj  nord_freeimage_imaging.vcxproj.filters
media_macos/media_macos.xcodeproj/: project.pbxproj
node_macos/: CMakeLists.txt  RtMidi.h  _.h  _factory.cpp  _library.h  _references.txt  factory_exchange.cpp  framework.h  music_midi_port_thread.h  node.cpp  node.h
node_macos/node_macos.xcodeproj/: project.pbxproj
node_macos/node_macos1.xcodeproj/: project.pbxproj
operating_ambient_macos/: CMakeLists.txt  _.h  _factory.cpp  framework.h  node.cpp  node.h
operating_ambient_macos/operating_ambient_macos.xcodeproj/: project.pbxproj
operating_ambient_macos/operating_ambient_macos1.xcodeproj/: project.pbxproj
windowing_macos/: CMakeLists.txt  NSPasteboard++.mm  SBSystemPreferences.h  _.h  _aaa_library.h  _c_mm.h  _factory.cpp  _library.h  _mm.h  _mm_cpp.h  _references.txt  _windowing_macos.h  aaa_imm_context.cpp  aaa_imm_context.h  aaa_notify_icon_listener.cpp  aaa_notify_icon_listener.h  aaa_oswindow_data.cpp  aaa_oswindow_data.h  aaa_windowing_keyboard.mm  copydesk.cpp  copydesk.h  copydesk.mm  cursor.cpp  cursor.h  cursor.mm  cursor_cpp.cpp  cursor_mm.mm  display.cpp  display.h  factory_exchange.cpp  framework.h  icon.cpp  icon.h  imm_client.cpp  imm_client.h  keyboard.cpp  keyboard.h  keyboard_hook.h  keyboard_hook.mm  keyboard_hook_authorization.mm  (+28 more)
windowing_macos/AuraWindow/: AuraWindow.h  AuraWindow.mm  AuraWindowApp.h  AuraWindowApp.mm  AuraWindowFrameView.h  AuraWindowFrameView.mm  aura_window.h  aura_window.mm
windowing_macos/macOSWindow/: macOSWindow.h  macOSWindow.mm  macOSWindowApp.h  macOSWindowApp.mm  macOSWindowFrameView.h  macOSWindowFrameView.mm  macos_window.h  macos_window.mm
windowing_macos/macos/: KeyboardLayoutObserver.h  KeyboardLayoutObserver.mm  _.mm  macOSApp.h  macOSApp.mm  macOSControlBox.h  (+13 more)
(+1060 files in other folders)
